<resources>
    <string name="app_name">Fitness Tracker</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="register">Register</string>
    <string name="fp">Final Project</string>
    <string name="back">Back To Main</string>
    <string name="home">Home</string>
    <string name="goals">Goals</string>
    <string name="add_goal">Add Goal</string>
    <string name="activities">Activities</string>
    <string name="add_activity">Add Activity</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="goal_name">Goal Name</string>
    <string name="goal_details">Goal Details</string>
    <string name="activity_name">Activity Name</string>
    <string name="activity_details">Activity Details</string>
    <string name="update_process">Update Progress</string>
    <string name="progress_report">Progress Report</string>
    <string name="details">Details</string>
    <string name="name">Name</string>
    <string name="name_that_you_want_to_update">Name that you want to update</string>
    <string name="goal">Goals</string>
    <string name="progress">Progress</string>
    <string name="you_made_great_progress">You made great Progress</string>
    <string name="activity">Activity</string>
    <string name="add_progress">Add Progress</string>
    <string name="old_progress_report">Old Progress Report</string>
    <string name="calculate_bmi">Calculate BMI</string>
    <string name="weight_in_kilograms">Weight (in kilograms)</string>
    <string name="height_in_meters">Height (in meters)</string>
    <string name="age">Age</string>
</resources>