<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="5dp"
    tools:context=".MainAcitvity.MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="189dp"
        android:layout_gravity="center"
        android:layout_marginTop="100dp"
        android:layout_marginBottom="5dp"
        android:importantForAccessibility="no"
        app:srcCompat="@drawable/app_logo" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="50dp"
        android:fontFamily="sans-serif"
        android:text="@string/fp"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="270dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/loginMain"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:padding="10dp"
            android:text="@string/login"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/regsterMain"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:text="@string/register"
            tools:ignore="ButtonStyle" />
    </LinearLayout>

</LinearLayout>